fix: break word in popup + wrap in card list item

--- a/src/components/CardListItem/style.scss
+++ b/src/components/CardListItem/style.scss
@@ -11,6 +11,7 @@
 	position: relative;
 
 	overflow: hidden;
+	white-space: nowrap;
 
 	display: grid;
 	grid-template-areas:
